# experiment-setuptools-plugin

./: README.md  pyproject.toml
src/experiment_setuptools_plugin/: __init__.py
